CORE-40629: Fixing alignment issues.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-details.scss
@@ -291,6 +291,7 @@
 
       @include breakpoint($only-mobile) {
         padding-#{$right}: 1rem;
+        padding-#{$left}: 3.125rem;
       }
 
       .icon-ic_infomation {
@@ -298,12 +299,12 @@
         margin-#{$left}: -0.125rem;
 
         @include breakpoint($only-mobile) {
-          margin-#{$left}: 0.3125rem;
+          margin-#{$left}: 0;
           margin-#{$right}: 1rem;
 
           html[lang=ar] & {
-            margin-#{$right}: 1rem;
-            margin-#{$left}: 0.1875rem;
+            margin-#{$right}: 1.0625rem;
+            margin-#{$left}: -0.125rem;
           }
         }
       }
